tests/parser/assert-statement-expression-error.stderr
error: expected expression
 --> $DIR/assert-statement-expression-error.lox:1:8
  |
1 | assert /;
  |        ^
